--- a/GamingScheduler-gcmlib/src/main/AndroidManifest.xml
+++ b/GamingScheduler-gcmlib/src/main/AndroidManifest.xml
@@ -9,6 +9,7 @@
 
     <uses-permission android:name="android.permission.INTERNET"/>
 
+   	<uses-permission android:name="com.frca.gamingscheduler.permission.C2D_MESSAGE"/>
    	<uses-permission android:name="com.google.android.c2dm.permission.RECEIVE"/>
    	<uses-permission android:name="android.permission.WAKE_LOCK"/>
    	<uses-permission android:name="android.permission.GET_ACCOUNTS"/>
