Implement proper user registration into gcm and exchanging auth ids

--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,8 @@
 /.idea
 /build/classes
 /GamingScheduler/build/
-/GamingScheduler-gcmlib/build/
 /GamingScheduler-AppEngine/google_generated/
 /GamingScheduler-AppEngine/target/
+/GamingScheduler-AppEngine/datanucleus.log
+/GamingScheduler-gcmlib/build/
+/GamingScheduler-gcmlib/src/main/java/com/frca/gamingscheduler\Const/Ids.java
