--- a/Purtges-AppEngine/pom.xml
+++ b/Purtges-AppEngine/pom.xml
@@ -18,6 +18,13 @@
     <dependencies>
         <!-- Compile/runtime dependencies -->
         <dependency>
+            <groupId>${project.groupId}.Const</groupId>
+            <artifactId>Ids</artifactId>
+            <version>1</version>
+            <scope>system</scope>
+            <systemPath>${project.basedir}/../Purtges-Const/build/libs/Purtges-Const.jar</systemPath>
+        </dependency>
+        <dependency>
             <groupId>com.google.appengine</groupId>
             <artifactId>appengine-api-1.0-sdk</artifactId>
             <version>${appengine.target.version}</version>
