Rename module Purtges to Purtges-Android
Signed-off-by: Frca <killerfrca@gmail.com>

--- a/settings.gradle
+++ b/settings.gradle
@@ -1,1 +1,1 @@
-include ':Purtges', ':Purtges-AppEngine', ':Purtges-endpoints', ':Purtges-Const'
+include ':Purtges-Android', ':Purtges-AppEngine', ':Purtges-endpoints', ':Purtges-Const'
