--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,7 @@
 /.gradle
 /.idea
 /build/classes
-/Purtges/build/
+/Purtges-Android/build/
 /Purtges-AppEngine/google_generated/
 /Purtges-AppEngine/target/
 /Purtges-AppEngine/datanucleus.log
