--- a/Purtges-Android/src/main/AndroidManifest.xml
+++ b/Purtges-Android/src/main/AndroidManifest.xml
@@ -16,8 +16,8 @@
     <uses-permission android:name="android.permission.USE_CREDENTIALS"/>
 
     <uses-sdk
-        android:minSdkVersion="15"
-        android:targetSdkVersion="15"/>
+        android:minSdkVersion="8"
+        android:targetSdkVersion="18"/>
 
     <application
         android:allowBackup="true"
@@ -25,7 +25,7 @@
         android:label="@string/app_name"
         android:theme="@style/AppTheme">
         <activity
-            android:name="com.frca.purtges.MainActivity"
+            android:name=".activities.MainActivity"
             android:label="@string/app_name">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN"/>
